--- a/views/form.erb
+++ b/views/form.erb
@@ -16,6 +16,7 @@
       <label>Address</label>
       <input size="60" type="text" name="contact[address]" />
     </li>
+    <input type="hidden" name="contact[created_at]" value="<%= get_time %>">
     <li>
       <label>Note</label>
       <textarea cols="40" rows="10" name="contact[note]"></textarea>
