adding some style on table

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,5 @@
+<a href="/contacts/new">new!</a>
+
 <table>
   <tr>
     <%@headers[0..3].each do |title| %>
@@ -16,5 +18,3 @@
   <%end%>
 
 </table>
-
-<a href="/contacts/new">new</a>
